# tinyfetch

./: .gitignore  README.md  _meson.build  meson.build  tinyfetch-6.0a-meson-build-pci.patch  tinyfetch-6.0a-remove-config.patch
.cache/clangd/index/: tinyfetch.c.7FB13845F8C2FA2A.idx  tinyfetch.h.87149DFACA525AF6.idx
.github/workflows/: release.yml
scripts/: gen_ascii.sh  strip.sh
src/: config.h  tinyascii.h  tinyfetch  tinyfetch.c  tinyfetch.cpp  tinyfetch.h  tinyfetch.hpp  tinyfetch.s
